# bizra_scaffold

./: .coverage  .env.template  .gitignore  =24.3.0  AUDIT_RESPONSE_EVIDENCE.md  BIZRA-Genesis-Message-Presentation.html  BIZRA-Genesis-Seed-Presentation.html  BIZRA_Genesis_Seal.ipynb  BIZRA_SOT.md  CODEOWNERS  CONTRIBUTING.md  COVENANT.md  Cargo.toml  ELITE_ANALYSIS_REPORT.md  ELITE_IMPLEMENTATION_SUMMARY.md  ELITE_ROADMAP.md  EVIDENCE_INDEX.md  GENESIS_CERTIFICATE.md  Genesis_NodeZero_Attestation_Spec_v1.0.md  INSTALLATION_GUIDE.md  INTEGRATION_README.md  LICENSE_NOTE.txt  Makefile  PERFORMANCE_ANALYSIS_REPORT.md  POST_QUANTUM_ROADMAP.md  PRODUCTION_VALIDATION_CHECKLIST.md  PROTOCOL.md  README.md  SECURITY.md  SOT_template.md  activate_pat.py  cognitive_sovereign.py  constitution.toml  ihsan_bridge.py  mypy.ini  pyproject.toml  report.md  requirements-production.txt  requirements.txt  ruff.toml  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  evidence-spine.yml  sbom.yml  security-secret-scan.yml  verify-metrics-gate.yml  verify.yml
api/: openapi.yaml
benches/: sovereign_bench.rs  sovereign_benchmark.rs
benchmarks/: performance_suite.py
config/: expertise.yaml  ihsan_vector.json  user_profile_derived.yaml
contracts/: IVerifier.sol
core/: __init__.py  apex_orchestrator.py  batch_verification.py  command_center.py  config.py  consequential_ethics.py  constitution.py  control_center.py  data_lake_config.py  data_lake_watcher.py  enhanced_cognitive_integration.py  event_sourcing.py  graph_of_thoughts.py  hallucination_detector.py  invariant_verifier.py  knowledge_bridge.py  lifecycle_emulator.py  narrative_compiler.py  observability.py  peak_masterpiece.py  production_safeguards.py  production_validator.py  snr_scorer.py  thermodynamic_engine.py  tiered_verification.py  ultimate_integration.py  value_oracle.py
core/agents/: __init__.py  pat.py  reflector.py  sat.py  self_improvement.py
core/architecture/: modular_components.py
core/async_utils/: execution.py
core/bicameral/: __init__.py  bicameral_engine.py  cold_core.py  membrane.py  warm_surface.py
core/contracts/: formal_invariants.py
core/engine/: __init__.py  api.py  state_persistence.py
crates/attestation-engine/: Cargo.toml  README.md
crates/attestation-engine/src/: crypto.rs  lib.rs  models.rs  scoring.rs
crates/bizra-crypto-native/: Cargo.toml
crates/bizra-crypto-native/src/: lib.rs
crates/bizra-jcs/: Cargo.toml
crates/bizra-jcs/src/: lib.rs
crates/bizra-pat-sat/: Cargo.toml
crates/bizra-pat-sat/src/: lib.rs
crates/bizra-verify/: Cargo.toml
crates/bizra-verify/src/: main.rs
crates/bizra-verify/templates/: CLAIM_REGISTRY.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: GENESIS_FLG.dot  GENESIS_NODE_ECOSYSTEM.md  MULTI_REPO_UNIFICATION.md  OPERATIONS_RUNBOOK.md  PROTOCOL_COMPARISON.md  VERIFICATION_STANDARD.md
evidence/: BICAMERAL_FIRECRACKER_EVIDENCE.md  CLAIM_REGISTRY.yaml  FATE_IMPLEMENTATION_EVIDENCE.md  GENESIS_FLG.json  PEAK_IMPLEMENTATION_EVIDENCE.md  PEAK_MASTERPIECE_EVIDENCE.md  PQAL_IMPLEMENTATION_EVIDENCE.md  RECOVERED_MASTERPIECE.md  SAPE_ANALYSIS_REPORT.md  SAPE_IMPLEMENTATION_EVIDENCE.md  ULTIMATE_MASTERPIECE_EVIDENCE.md
examples/: graph_of_thoughts_demo.py  v02_demo.rs
investor_materials/: BIZRA_ONE_PAGER.md  BIZRA_PITCH_DECK.md  BIZRA_Sovereign_Future_Pitch.html  DEMO_SCRIPT.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
keys/: README.md  public.key  secret.key
lineage-seal/: README.md
monitoring/: grafana_dashboard.json  prometheus_alerts.yml
plans/: distributed_scalability_roadmap.md
policies/: base_policy.json
primordial/: CROSS_VALIDATION.md  README.md
schemas/: commit_receipt.schema.json  cross_layer_invariant.schema.json  deflation_report.schema.json  dual_token_ledger.schema.json  environmental_impact_report.schema.json  evidence-receipt.schema.json  governance_appeal.schema.json  metrics.schema.json  metrics_receipt.schema.json  pat_manifest.schema.json  pci_envelope.schema.json  sat_manifest.schema.json
scripts/: bizra.py  dashboard_cli.py  generate_genesis_seal.py  genesis_node_discovery.py  genesis_system_attestation.py  ingest_user_profile.py  rotate_keys.py  run_giants_got_pipeline.py  run_watcher.py  validate_governance.py  validate_ihsan_enforcement.py  verify_compliance.py  verify_genesis_chain.py  verify_lineage_seal.sh
src/: a2a.rs  a2a_external.rs  bizra_integration.rs  bridge.rs  bridge_covenant_integration.md  cognitive.rs  covenant_bridge.rs  embeddings.rs  embodied.rs  engram.rs  errors.rs  evidence.rs  evolution.rs  executor.rs  experience_memory.rs  fate.rs  fixed.rs  giants.rs  hookchain.rs  hot_path.rs  http.rs  identity.rs  ihsan.rs  ihsan_gate.py  ledger.rs  lib.rs  main.rs  mcp.rs  memory_genesis.rs  metrics.rs  model_fabric.rs  nonce_journal.rs  ollama.rs  omega.rs  pat.rs  pat_enhanced.rs  pipeline.rs  poi.rs  primordial.rs  py.rs  (+21 more)
tests/: a2a_external_test.rs  adversarial_tests.rs  beg_gates.rs  elite_integration_test.rs  formal_verification_tests.rs  integration_harness.rs  integration_umbrella.rs  jcs_hardening.rs  pat_sat_runtime_tests.rs  property_tests.rs  sape_integration_tests.rs  sape_stress_test.rs  sat_rejection_tests.rs  security_invariants.rs  test_agent_memory.py  test_bicameral_membrane.py  test_chat_to_knowledge_pipeline.py  test_cognitive_autonomy.py  test_cognitive_sovereign.py  test_command_center.py  test_constitution.py  test_core_modules.py  test_crypto_stable_context_keys.py  test_data_lake_watcher.py  test_elite.py  test_event_log.py  test_expertise_store.py  test_genesis_chain.py  test_genesis_orchestrator.py  test_genesis_terminal.py  test_giants_protocol.py  test_golden_vectors.py  test_graph_of_thoughts_integration.py  test_hallucination_detector.py  test_integration.py  test_integration_elite.py  test_knowledge_bridge.py  test_pci_protocol.py  test_peak_masterpiece.py  test_policy_deny_keys.py  (+9 more)
tools/: bizra_verify.py  evidence_guard.py  genesis_terminal.py
(+875 files in other folders)
