[package]
name = "attestation-engine"
version = "0.2.0"
edition = "2021"
description = "Sovereign Attestation Engine for BIZRA NodeZero"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde_jcs = "0.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
