[package]
name = "bizra-verify"
version = "1.0.0"
edition = "2021"
authors = ["BIZRA Security Team <security@bizra.io>"]
description = "BIZRA AEON OMEGA - Metrics Verification CLI with Cryptographic Receipts"
license = "MIT"
repository = "https://github.com/BizraInfo/bizra_scaffold"
keywords = ["verification", "metrics", "ihsan", "cryptographic-proof"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
ring = "0.17"  # For Ed25519 signing
walkdir = "2.4"
regex = "1.10"
num_cpus = "1.16"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "bizra-core"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
